<resources>
    <string name="app_name">TourGuideApp</string>
    <string name="activities">Activities</string>
    <string name="nature">Nature</string>
    <string name="hotels">Hotels</string>
    <string name="shopping">Shopping</string>
    <string name="restaurants">Restaurants</string>
    <string name="beaches">Beaches</string>
    <string name="relax">Relax</string>
    <string name="salalah">Salalah</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="ready_to_travel">Ready to Travel</string>
    <string name="ready_to_travel_text">Time to travel to one of the best areas in the Middle East! Take your time to explore the best sites found here!</string>
    <string name="best_destination">Best Destination</string>
    <string name="best_destination_text">Consider Salalah to be your vey first destination. Wonderful nature, beaches and shopping places you can find here!</string>
    <string name="best_hotels">Best Hotels</string>
    <string name="best_hotels_text">Hotels cover all your needs with affordable prices. Welcome!</string>
    <string name="get_started">Get Started</string>
    <string name="next">Next</string>

    <!--Restaurants-->
    <string name="hamdan_plaza_restaurant">Hamdan Plaza Restaurant</string>
    <string name="sammak_restaurant">Sammak Restaurant</string>

    <!--hotels-->
    <string name="hamdan_plaza_hotel">Hamdan Plaza</string>
    <string name="hamdan_plaza_url">https://www.booking.com/hotel/om/hamdan-plaza.ar.html</string>
    <string name="gardens_hotel">Gardens Hotel</string>
    <string name="gardens_url">http://www.safirhotels.com/</string>
    <string name="rotana_hotel">Rotana</string>
    <string name="rotana_url">https://www.rotana.com/rotanahotelandresorts/oman/salalah/salalahrotanaresort</string>
    <string name="crowne_plaza_hotel">Crowne Plaza</string>
    <string name="crowne_plaza_url">https://www.crowneplaza.com/hotels/ae/ar/find-hotels/hotel/rates?qDest=Po%20Box%20870,%20Salalah,%20OM&amp;amp;qCiMy=12019&amp;amp;qCiD=10&amp;amp;qCoMy=12019&amp;amp;qCoD=11&amp;amp;qAdlt=2&amp;amp;qChld=0&amp;amp;qRms=1&amp;amp;qRtP=6CBARC&amp;amp;qIta=99618783&amp;amp;qSlH=SLLSS&amp;amp;qSlRc=KNGS&amp;amp;qAkamaiCC=US&amp;amp;qBrs=re.ic.in.vn.cp.vx.hi.ex.rs.cv.sb.cw.ma.ul.ki.va&amp;amp;qAAR=6CBARC&amp;amp;qWch=0&amp;amp;qSmP=1&amp;amp;cm_mmc=hpa_OM_desktop_SLLSS_mapresults_1_OMR_2019-02-10_default_1992967289__false&amp;amp;setPMCookies=true&amp;amp;glat=META_hpa_OM_desktop_SLLSS_mapresults_1_OMR_2019-02-10_default_1992967289__false&amp;amp;qRad=30&amp;amp;qRdU=mi&amp;amp;srb_u=1</string>
    
    <!--nature-->
    <string name="arzat_nature">Arzat Spring</string>
    <string name="arzat_nature_subtitle">Lorem ipsum dolor sit amet, praesent nisl at sollicitudin,
        leo diam vivamus leo amet. </string>
    <string name="darbat_nature">Darbat Spring</string>
    <string name="himran_nature">Himran Spring</string>
    <string name="jarzeez_nature">Jarzeez Spring</string>


    <!--Shopping-->
    <string name="carrefour_shopping">Carrefour</string>
    <string name="lulu_shopping">Lulu</string>
    <string name="carrefour_url">https://www.carrefouroman.com/</string>
    <string name="lulu_url">http://oman.luluhypermarket.com/OM/all</string>

    <!--beaches-->
    <string name="maghseel_beach">Maghseel</string>
    <string name="dahareez_beach">Dahareez</string>
    <string name="haffa_beach">Haffa Beach</string>
    <string name="mirbat_beach">Mirbat Beach</string>

    <!--buttons-->
    <string name="book_now">Book Now</string>
    <string name="go_online">Go Online</string>
    <string name="on_map">On map</string>

    <!--location-->
    <string name="gps_crowne_plaza">17.009342,54.152216</string>
    <string name="gps_hamdan_plaza">17.019285,54.060908</string>
    <string name="gps_gardens">17.022435,54.066085</string>
    <string name="gps_rotana">17.030712,54.296055</string>
    <string name="gps_lulu">17.017114,54.061711</string>
    <string name="gps_dahareez">17.010333,54.169398</string>
    <string name="gps_haffa">17.001538,54.113047</string>
    <string name="gps_maghseel">16.875488,53.766112</string>
    <string name="gps_mirbat">16.978485,54.686737</string>
    <string name="gps_arzat">17.129886,54.237979</string>
    <string name="gps_darbat">17.129886,54.237979</string>
    <string name="gps_himran">17.097262,54.281278</string>
    <string name="gps_jarzeez">17.105654,54.074202</string>
</resources>
